tests/fails/opaque2.t
require("fail")


terra what(a : opaque)
end


what:compile()
